objects/Contact.object
<CustomObject>
    <fields>
        <fullName>TopBoxWG__TopBox_Send_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check the box to include the contact in the upcoming Onboarding or Initial/Renewal Relationship questionnaires. If the Next Questionnaire Type is Onboarding, make sure to select the contact prior to the Onboarding Send Date. If the next scheduled questionnaire type is Initial/Renewal, make sure to select the contact at least 25 hrs prior the Next Questionnaire Send Date (in order to schedule the Pre-Note email 24 hours prior to the Next Questionnaire Send Date).</description>
        <inlineHelpText>Check the box to include the contact in the upcoming Onboarding or Adoption/Pre-Renewal/Steady State questionnaires prior to the Send Dates. If the Next Questionnaire Type is Adoption/Pre-Renewal/Steady State, select the contact at least 25 hours in advance to also send the Pre-Note email.</inlineHelpText>
        <label>TopBox - Send Onboarding/Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopBox_Adoption_Send_Date__c</fullName>
        <inlineHelpText>Date on which the Adoption assessment is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True).</inlineHelpText>
        <label>TopBox - Adoption Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBox_Pre_Renewal_Send_Date__c</fullName>
        <inlineHelpText>Date on which the Pre-Renewal assessment is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True).</inlineHelpText>
        <label>TopBox - Pre-Renewal Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBox_Steady_State_Send_Date__c</fullName>
        <inlineHelpText>Date on which the Steady State assessment is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True). Once the current feedback wave has passed, the field automatically updates to reflect the next send date.</inlineHelpText>
        <label>TopBox - Steady State Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unsubscribe__c</fullName>
        <formula>HYPERLINK(&quot;http://copa.do/Unsubscribe?id=&quot; &amp; Id &amp; &quot;&amp;email=&quot; &amp; Email, &quot;click here&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unsubscribe all contacts and leads with this email address</inlineHelpText>
        <label>Unsubscribe</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>User Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vorname__c</fullName>
        <formula>LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vorname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Industry__c</fullName>
        <label>6s Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_NAICS_Code__c</fullName>
        <label>6s NAICS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_NAICS_Description__c</fullName>
        <label>6s NAICS Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Revenue_Range__c</fullName>
        <label>6s Revenue Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_SIC_Code__c</fullName>
        <label>6s SIC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_SIC_Description__c</fullName>
        <label>6s SIC Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Segments__c</fullName>
        <label>6s Segments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Title_Function__c</fullName>
        <label>6s Title Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Title_Level__c</fullName>
        <label>6s Title Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Updated__c</fullName>
        <label>6s Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>accountBuyingStage6sense_Copado__c</fullName>
        <label>6sense Account Buying Stage Copado</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountIntentScore6sense_Copado__c</fullName>
        <label>6sense Account Intent Score Copado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>accountProfileFit6sense_Copado__c</fullName>
        <label>6sense Account Profile Fit Copado</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountProfileScore6sense_Copado__c</fullName>
        <label>6sense Account Profile Score Copado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bre__Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Auto_collection__c</fullName>
        <label>Auto collection</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__ChargeBee_Modified_Time__c</fullName>
        <label>ChargeBee_Modified_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__External_Id__c</fullName>
        <description>CB external id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Net_Term_Days__c</fullName>
        <description>Net Term days picklist from Salesforce</description>
        <label>Net Term Days</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>chargebeeapps__Net_Term_Days</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__Payment_Method_Status__c</fullName>
        <description>Payment Method Status</description>
        <label>Payment Method Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Payment_Method_Type__c</fullName>
        <description>Payment method type</description>
        <label>Payment Method Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Preferred_currency__c</fullName>
        <label>Preferred currency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Sync_with_Chargebee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Chargebee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>contactGrade6sense_Copado__c</fullName>
        <label>6sense Contact Grade Copado</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contactIntentScore6sense_Copado__c</fullName>
        <label>6sense Contact Intent Score Copado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>contactProfileFit6sense_Copado__c</fullName>
        <label>6sense Contact Profile Fit Copado</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contactProfileScore6sense_Copado__c</fullName>
        <label>6sense Contact Profile Score Copado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>contactUpdateDate6sense_Copado__c</fullName>
        <label>6sense Contact Update Date Copado</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ebsta1__Ebsta_Score_Trend_Last_30_Days__c</fullName>
        <label>Ebsta Score Trend Last 30 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Ebsta_Score_Trend_Last_7_Days__c</fullName>
        <label>Ebsta Score Trend Last 7 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Ebsta_Score_Trend_Last_90_Days__c</fullName>
        <label>Ebsta Score Trend Last 90 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Ebsta_Score__c</fullName>
        <label>Ebsta Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_Ebsta_Stats_Update__c</fullName>
        <label>Last Ebsta Stats Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_Email_Activity_Date__c</fullName>
        <label>Last Email Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_month_emails_exchanged_inbound__c</fullName>
        <label>Last month emails exchanged inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_month_emails_exchanged_outbound__c</fullName>
        <label>Last month emails exchanged outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_week_emails_exchanged_inbound__c</fullName>
        <label>Last week emails exchanged inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_week_emails_exchanged_outbound__c</fullName>
        <label>Last week emails exchanged outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Out_of_office_until__c</fullName>
        <description>Ebsta out of office field.</description>
        <label>Out of office until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ebsta1__Total_emails_exchanged_inbound__c</fullName>
        <label>Total emails exchanged inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Total_emails_exchanged_outbound__c</fullName>
        <label>Total emails exchanged outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>fcio1__LeadStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>fcio1__Domain_In_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain In Sync?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Domain_Key__c</fullName>
        <label>Clean Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Domain_Last_Updated_At__c</fullName>
        <label>Domain Last Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fcio1__Domain__c</fullName>
        <formula>IF(NOT(ISBLANK(Email)), 
IF( 
CONTAINS(Email, &quot;gmail&quot;) || CONTAINS(Email, &quot;yahoo&quot;) || CONTAINS(Email, &quot;hotmail&quot;) || CONTAINS(Email, &quot;outlook&quot;), NULL, SUBSTITUTE(Email, LEFT(Email, FIND( &quot;@&quot;, Email)), NULL) 
),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__RoutingRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Routing Rule</label>
        <referenceTo>fcio1__QueueParticipant__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugadd__DisableAccountToContactSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Account to Contact Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__PayPal_Payer_Id__c</fullName>
        <inlineHelpText>Id assigned by PayPal to this contact.</inlineHelpText>
        <label>PayPal Payer Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Budget_Counter__c</fullName>
        <label>Gift Budget Counter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>lnt__Budget_Limit__c</fullName>
        <label>Gift Budget Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>lnt__Gift_Counter__c</fullName>
        <label>Gift Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lnt__Gift_Number_Limit__c</fullName>
        <label>Gift Number Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lnt__Gift_Status__c</fullName>
        <label>Gift Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Gifted__c</fullName>
        <formula>IF( lnt__Gift_Status__c  &lt;&gt; null , &apos;Gift Sent&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gifted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Marketing_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Not_Gifted__c</fullName>
        <formula>IF( lnt__Gift_Status__c  = null, &apos;Not Gifted&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Gifted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Test_Custom_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Custom User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Thank_You_Note__c</fullName>
        <label>Thank You Note</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Work_Anniversary__c</fullName>
        <description>custom field for testing</description>
        <inlineHelpText>custom field for testing</inlineHelpText>
        <label>Work Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>lnt__of_Total_Activities__c</fullName>
        <label># of Total Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit__c</fullName>
        <label>MK Customer Fit</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit_score__c</fullName>
        <label>MK Customer Fit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit_segment__c</fullName>
        <label>MK Customer Fit Segment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit_signals__c</fullName>
        <label>MK Customer Fit Signals</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mk_lead_grade_score__c</fullName>
        <label>MK Lead Grade Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mk_lead_grade_segment__c</fullName>
        <label>MK Lead Grade Segment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mk_likelihood_to_buy_score__c</fullName>
        <label>MK Likelihood To Buy Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mk_likelihood_to_buy_segment__c</fullName>
        <label>MK Likelihood To Buy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mk_recent_activity__c</fullName>
        <label>MK Recent Activity</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Alternate_Mobile_Phone_Available__c</fullName>
        <label>Alternate Mobile Phone Number Available</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Alternate_Mobile_Phone_Number_Available__c</fullName>
        <formula>CASE( modigie__Alternate_Mobile_Phone_Available__c, &apos;Yes&apos;, IMAGE(&quot;/resource/modigie__Yes_word_image&quot;, &quot;Yes Image&quot;,12,22), &apos;No&apos;, IMAGE(&quot;/resource/modigie__No_Word_Image&quot;, &quot;No Image&quot;,10,20) ,&apos;&apos;)</formula>
        <label>Alternate Mobile Phone Number Available</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Company_Email__c</fullName>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>modigie__Company_URL__c</fullName>
        <label>Company URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>modigie__Enable_Validate_Employer_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Validate Employer Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Is_Dynamic_Criteria_Field_Values_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dynamic Criteria Field Values Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>modigie__ModigieValidatedNumberCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ModigieValidatedNumberCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Modigie_Mobile_Number_Salesloft_Formula__c</fullName>
        <formula>modigie__Modigie_Mobile_Number_Salesloft__c</formula>
        <label>Modigie Mobile E.164 Map To Dialer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Modigie_Mobile_Number_Salesloft__c</fullName>
        <label>Modigie Mobile E.164 Format</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Modigie_Verified_Number__c</fullName>
        <label>Modigie Validated Mobile Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Modigie_Verified_Number_formula__c</fullName>
        <formula>modigie__Modigie_Verified_Number__c</formula>
        <label>Modigie Mobile Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Test_Alt_LinkedIn_Url_FIeld__c</fullName>
        <label>Test Alt LinkedIn Url FIeld</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>modigie__Validation_Key__c</fullName>
        <label>Validation Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__linkedin_url__c</fullName>
        <label>Modigie LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is no longer used.</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this contact.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the search term.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether contact hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Currency_Test__c</fullName>
        <description>Test Description</description>
        <inlineHelpText>Test Description</inlineHelpText>
        <label>Currency Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Formula_Test__c</fullName>
        <formula>rh2__Currency_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Integer_Test__c</fullName>
        <label>Integer Test</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AOV_Band_Accounts_SF_Contacts_LACA</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account.AOV_Band__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Account.Region__c</field>
            <operation>equals</operation>
            <value>LACA</value>
        </filters>
        <label>AOV Band Accounts--SF Contacts--LACA</label>
        <sharedTo>
            <role>Director_Alliances</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>ebsta1__Ebsta_Score__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.OWNER.ALIAS</columns>
        <columns>Account.AOV_Band__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>Account_Type_Std__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Rogers_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Allowed_Playgrounds__c</columns>
        <columns>UserId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Rogers</value>
        </filters>
        <label>All Rogers Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ClickDeploy_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>ClickDeploy_License_Type__c</columns>
        <columns>ClickDeploy_Last_Login_Date__c</columns>
        <columns>ClickDeploy_Created_Date__c</columns>
        <columns>ClickDeploy_Salesforce_Username__c</columns>
        <columns>ClickDeploy_Total_Deploy_This_Month__c</columns>
        <columns>ClickDeploy_Total_Deploy_Attempt__c</columns>
        <columns>ClickDeploy_Total_Success_Deploy_Attempt__c</columns>
        <columns>ClickDeploy_Enterprise_Trial_Expiry_Date__c</columns>
        <columns>ClickDeploy_Enterprise_Trial_Started__c</columns>
        <columns>ClickDeploy_Opportunity_Created_Date__c</columns>
        <columns>ClickDeploy_Marketing_Source__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ClickDeploy_User_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>ClickDeploy Contacts</label>
    </listViews>
    <listViews>
        <fullName>ClickDeploy_Contacts_Enterprise</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>ClickDeploy_License_Type__c</columns>
        <columns>ClickDeploy_Last_Login_Date__c</columns>
        <columns>ClickDeploy_Created_Date__c</columns>
        <columns>ClickDeploy_Salesforce_Username__c</columns>
        <columns>ClickDeploy_Total_Deploy_This_Month__c</columns>
        <columns>ClickDeploy_Total_Deploy_Attempt__c</columns>
        <columns>ClickDeploy_Total_Success_Deploy_Attempt__c</columns>
        <columns>ClickDeploy_Enterprise_Trial_Expiry_Date__c</columns>
        <columns>ClickDeploy_Enterprise_Trial_Started__c</columns>
        <columns>ClickDeploy_Opportunity_Created_Date__c</columns>
        <columns>ClickDeploy_Marketing_Source__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ClickDeploy_User_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ClickDeploy_License_Type__c</field>
            <operation>equals</operation>
            <value>Enterprise</value>
        </filters>
        <label>ClickDeploy Contacts - Enterprise</label>
    </listViews>
</CustomObject>